# fastapi-aws-devops-cloud-platform

./: .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CONTRIBUTING.md  Dockerfile  Dockerfile.test  Makefile  PHASE_1_COMPLETE.md  README.md  alembic.ini  alembic_cockroach.ini  docker-compose.test.yml  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  test_api.py
.github/workflows/: ci-cd.yml  security-scan.yml
.kiro/specs/ml-workflow-platform/: design.md  requirements.md  tasks.md
alembic/: env.py
alembic/versions/: cff8dde3e17a_initial_migration_with_user_management_.py
alembic_cockroach/: env.py
docs/: API.md  CI-CD.md  DEPLOYMENT.md  SETUP_COMPLETE.md  TASK_1.4_SUMMARY.md  TESTING.md
scripts/: init-db.sql  local_start.bat  local_start.py  seed_data.py  setup.py  setup_dev_env.py  start.bat  start.sh
src/: __init__.py  main.py  main_cockroach.py  main_local.py
src/services/: README.md  __init__.py
src/services/api_gateway/: __init__.py
src/services/data_pipeline/: __init__.py
src/services/model_registry/: __init__.py
src/services/monitoring/: __init__.py
src/services/prediction_service/: __init__.py
src/services/user_management/: README.md  dependencies.py  email_service.py  models.py  models_cockroach.py  repository.py  routes.py  schemas.py  service.py
src/services/workflow_engine/: __init__.py
src/shared/: __init__.py  auth.py  config.py  config_cockroach.py  config_local.py  database.py  database_cockroach.py  database_local.py  exceptions.py  logging.py  middleware.py  schemas.py  session.py
tests/: README.md  __init__.py  conftest.py  test_health.py  test_user_management.py
